Getting close to being able to deploy

--- a/RegressionTool_APP.ipynb
+++ b/RegressionTool_APP.ipynb
@@ -252,13 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
@@ -275,14 +279,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-datepicker.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:10] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 14:22:12] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-datepicker.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:18:53] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -473,7 +477,29 @@
     "                \n",
     "                        html.Br(),\n",
     "                        html.Br(),\n",
-    "                        html.Plaintext('Description:  Tool to help estimate missing or erroneous data. <b> asdf </b> asdfad ')\n",
+    "                        html.Details(\n",
+    "                            children=[\n",
+    "                                html.Summary('Useful Tibits'),\n",
+    "                                html.P(children=[\n",
+    "                                    'Tool can be used to estimate missing or bad data on any SNOTEL or SNOLITE station in AWDB.',\n",
+    "                                    html.Br(),\n",
+    "                                    'If you are having issues with data updating, likely reasons may include:',\n",
+    "                                    html.Br(),\n",
+    "                                    '1. Data does not exist for the date range you are trying to train the model on - Use Report Generator to determine the length of record for the interested stations.',\n",
+    "                                    html.Br(),\n",
+    "                                    '2. Similar to one, the specific dates selected can NOT be null in AWDB.  If estimating current data and no end date is available, go into DMP and add a temporary value for the end date. Change this temporary value afterwards using the regression model that you create.'\n",
+    "                                ])\n",
+    "                        \n",
+    "\n",
+    "                                ],\n",
+    "#                             rows=4,\n",
+    "#                             cols=55\n",
+    "#                                              )],\n",
+    "                            title = 'Tool Description and Useful Info:',\n",
+    "                            id = 'Tool Description and Useful Info:',\n",
+    "                            key = 'Tool Description and Useful Info:',\n",
+    "                            style = subheading\n",
+    "                        )\n",
     "            ])])\n",
     "\n",
     "\n",
@@ -604,18 +630,18 @@
     "\n",
     "#Not sure why needing to filter out Nones again...\n",
     "# Filter out Nones in case not all station parameter dropdowns are used\n",
-    "    station_param_pairs0 = [\n",
-    "        (responsestation, responseparameter), \n",
-    "        (predictorstation1, predictorparameter1), \n",
-    "        (predictorstation2, predictorparameter2), \n",
-    "        (predictorstation3, predictorparameter3),\n",
-    "#         (predictorstation4, predictorparameter4)\n",
-    "    ]\n",
+    "#     station_param_pairs0 = [\n",
+    "#         (responsestation, responseparameter), \n",
+    "#         (predictorstation1, predictorparameter1), \n",
+    "#         (predictorstation2, predictorparameter2), \n",
+    "#         (predictorstation3, predictorparameter3),\n",
+    "# #         (predictorstation4, predictorparameter4)\n",
+    "#     ]\n",
     "    \n",
-    "    stationparampairs2 = []\n",
-    "    for i in station_param_pairs0:\n",
-    "        if i[0] is not None and i[1] is not None:\n",
-    "            stationparampairs2.append(i)\n",
+    "#     stationparampairs2 = []\n",
+    "#     for i in station_param_pairs0:\n",
+    "#         if i[0] is not None and i[1] is not None:\n",
+    "#             stationparampairs2.append(i)\n",
     "        \n",
     "#Run the regression analysis \n",
     "    model_pred = RegressionTool.RegressionFun(\n",
@@ -650,7 +676,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " help(dash.html.Details)"
+   ]
   },
   {
    "cell_type": "code",
