Much better text description of app

--- a/RegressionTool_APP.ipynb
+++ b/RegressionTool_APP.ipynb
@@ -252,13 +252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
@@ -279,14 +291,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-datepicker.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:51] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [20/Oct/2021 18:18:53] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-datepicker.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:50] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Oct/2021 18:43:52] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -416,6 +428,19 @@
     "                                        value=None,\n",
     "                    #                     style = 'station_dropdown_style'\n",
     "                                        ),\n",
+    "                            html.Br(),\n",
+    "                            dcc.Dropdown(id = 'predictor-station4', \n",
+    "                                         options = options, \n",
+    "                                         multi = False,\n",
+    "                                         value = None,\n",
+    "                    #                      style = station_dropdown_style\n",
+    "                                        ),\n",
+    "                            dcc.Dropdown(id = 'predictor-parameter4', \n",
+    "                                        options = parameter_options,\n",
+    "                                        multi = False,\n",
+    "                                        value=None,\n",
+    "                    #                     style = 'station_dropdown_style'\n",
+    "                                        ),\n",
     "\n",
     "                        ]),\n",
     "                        html.Br(),\n",
@@ -481,13 +506,26 @@
     "                            children=[\n",
     "                                html.Summary('Useful Tibits'),\n",
     "                                html.P(children=[\n",
-    "                                    'Tool can be used to estimate missing or bad data on any SNOTEL or SNOLITE station in AWDB.',\n",
+    "                                    'Tool can be used to estimate missing or bad data for any sensor on any SNOTEL or SNOLITE station in AWDB.',\n",
     "                                    html.Br(),\n",
-    "                                    'If you are having issues with data updating, likely reasons may include:',\n",
     "                                    html.Br(),\n",
-    "                                    '1. Data does not exist for the date range you are trying to train the model on - Use Report Generator to determine the length of record for the interested stations.',\n",
+    "                                    'If you are having issues with figures updating, likely reasons include:',\n",
     "                                    html.Br(),\n",
-    "                                    '2. Similar to one, the specific dates selected can NOT be null in AWDB.  If estimating current data and no end date is available, go into DMP and add a temporary value for the end date. Change this temporary value afterwards using the regression model that you create.'\n",
+    "                                    '1. Data does not exist for the date range you are trying to train the model - Use Report Generator to determine the length of record for the interested stations.',\n",
+    "                                    html.Br(),\n",
+    "                                    '2. Similar to one, the specific four dates selected above can NOT be null in AWDB.  If estimating current data and no end date is available, go into DMP and add a temporary value for the end date. Change this temporary value afterwards using the regression model that you create.',\n",
+    "                                    html.Br(),\n",
+    "                                    html.Br(),\n",
+    "                                    'When evaluating models, pay attention to the Root Mean Square Error (RMSE) between the training and test data sets.',\n",
+    "                                    html.Br(),\n",
+    "                                    'As a general rule you want to minimize the error of both, but they should be similar in value.',\n",
+    "                                    html.Br(),\n",
+    "                                    'RMSE of test > RMSE of train => OVER FITTING of the data.',\n",
+    "                                    html.Br(),\n",
+    "                                    'RMSE of test < RMSE of train => UNDER FITTING of the data.',\n",
+    "                                    html.Br(),\n",
+    "                                    html.Br(),\n",
+    "                                    'When choosing regression model to make real world estimates, stick to linear models (linear, ridge, lasso, and huber).  These models are easy to explain and defend.  Additionally, the more advanced models have major drawbacks (primarily overfitting) that require either limiting the dataset or fine tuning parameters that are not available in this app.',\n",
     "                                ])\n",
     "                        \n",
     "\n",
@@ -570,8 +608,8 @@
     "    State('predictor-parameter2','value'),\n",
     "    State('predictor-station3','value'),\n",
     "    State('predictor-parameter3','value'),\n",
-    "#     State('predictor-station4','value'),\n",
-    "#     State('predictor-parameter4','value'),\n",
+    "    State('predictor-station4','value'),\n",
+    "    State('predictor-parameter4','value'),\n",
     "    State('startdate_picker', 'date'),\n",
     "    State('enddate_picker', 'date'),\n",
     "    State('model_selection', 'value'),\n",
@@ -591,8 +629,8 @@
     "    predictorparameter2,\n",
     "    predictorstation3, \n",
     "    predictorparameter3,\n",
-    "#     predictorstation4, \n",
-    "#     predictorparameter4, \n",
+    "    predictorstation4, \n",
+    "    predictorparameter4, \n",
     "    startdate, \n",
     "    enddate,\n",
     "    modelselection,\n",
@@ -606,7 +644,7 @@
     "        (predictorstation1, predictorparameter1), \n",
     "        (predictorstation2, predictorparameter2), \n",
     "        (predictorstation3, predictorparameter3),\n",
-    "#         (predictorstation4, predictorparameter4)\n",
+    "        (predictorstation4, predictorparameter4)\n",
     "    ]\n",
     "\n",
     "    stationparampairs2 = []\n",
